--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -10,7 +10,7 @@ h1 {
 
 h2 {
   margin-bottom: 10px;
-  color: #f05050;
+  color: #ffff;
   font-size: 14px;
 }
 
@@ -30,8 +30,7 @@ li {
   width: 980px;
   margin: 60px auto;
   padding: 40px;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: rgba(108, 231, 247, 0.384);
   border-radius: 5px;
   box-sizing: border-box;
 }
