--- a/app/assets/stylesheets/shared/header.scss
+++ b/app/assets/stylesheets/shared/header.scss
@@ -3,10 +3,14 @@
 }
 
 .top-page-header {
+
+  background-position: top center;
+  background-size: cover;
   width: 100vw;
+  height: 80px;
   padding: 1vh 7vw;
   display: flex;
-  flex-direction: column;
+  //flex-direction: column;
 }
 
 .search-bar-contents {
@@ -17,7 +21,8 @@
 }
 
 .furima-icon {
-  width: 15vw;
+  height: 150px;
+  width: 150px;
   margin-right: 5vw;
   display: flex;
   justify-content: center;
@@ -114,9 +119,12 @@
   font-weight: bold;
   padding: 12px 0 8px;
   text-decoration: none;
-  color: #67c5ff;
   transition: .4s;
+  margin: 0px 40px ;
+  color:white;
 }
+
+
 
 .btn-horizontal-border:before {
   position: absolute;
@@ -150,3 +158,48 @@
 .btn-horizontal-border:hover:after {
   top: 3px;
 }
+
+.finish{
+  position: relative;;
+  display: inline-block;
+  font-weight: bold;
+  padding: 12px 0 8px;
+  text-decoration: none;
+  transition: .4s;
+  margin: 0px 40px ;
+  color:rgb(8, 214, 250);
+}
+
+.finish:before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 4px;
+  top:100%;
+  left: 0;
+  border-radius: 3px;
+  background:#67c5ff;
+  transition: .2s;
+}
+
+.finish:after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 4px;
+  top:0;
+  left: 0;
+  border-radius: 3px;
+  background:#67c5ff;
+  transition: .2s;
+}
+
+.finish:hover:before {
+  top: -webkit-calc(100% - 3px);
+  top: calc(100% - 3px);
+}
+
+.finish:hover:after {
+  top: 3px;
+}
+
