--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,6 @@
 <%= render "shared/header" %>
 <div class='main'>
 </div>
-  <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
       ままたちのアプリ
@@ -21,7 +20,7 @@
   <%# FURIMAが選ばれる3つの理由部分 %>
   <div class='select-reason-contents'>
     <h2 class='title'>
-     <%= link_to "mamaの悩み", rooms_path, class: "btn-circle-fishy" %>
+     <%= link_to "maman", rooms_path, class: "btn-circle-fishy" %>
       <%#<%= button_to "ままの悩み", {controller: 'items', action: 'index'}, {method: :get} %>
     </h2>
     <ul class='reason-lists'>
@@ -178,7 +177,7 @@
   <%#<%# /商品一覧 %>
 </div>
 <%#<%= link_to('#', class: 'purchase-btn') do %>
-  <span class='purchase-btn-text'>出品する</span>
-  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+
+
 <%#<% end %>
 <%= render "shared/footer" %>
