--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,18 +1,16 @@
 
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-      <%= link_to image_tag("maman3.png", class:"furima-icon"), "/" %>
+      <%= link_to image_tag("d33ff0ea-d545-43b5-88b2-d1ded0af9f01_200x200.png", class:"furima-icon"), "/" %>
       <div class='nav'>
         <ul class='lists-right'>
        <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
         <% if user_signed_in? %>
-        <li><%= link_to current_user.nickname, "#", class: "btn-horizontal-border" %></li>
+        <li><%= link_to current_user.nickname, user_path(current_user.id), class: "btn-horizontal-border" %></li>
         <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "btn-horizontal-border" %></li>
         <% else %>
-        <li><%= link_to 'ログイン    ', new_user_session_path, class: "btn-horizontal-border" %></li>
-        <%#<li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
+        <li><%= link_to 'ログイン', new_user_session_path, class: "btn-horizontal-border" %></li><br>
         <li><%= link_to '新規登録', new_user_registration_path, class: "btn-horizontal-border" %></li>
-        <%#<li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
         <% end %>
       </div>
       <%# //deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
