--- a/app/views/shared/_second-header.html.erb
+++ b/app/views/shared/_second-header.html.erb
@@ -1,3 +1,3 @@
 <header class='second-header'>
-  <%= link_to image_tag("maman3.png", class:"furima-icon"), "/" %>
+  <%= link_to image_tag("d33ff0ea-d545-43b5-88b2-d1ded0af9f01_200x200.png", class:"furima-icon"), "/" %>
 </header>
